tests/unit/evaluation/minizinc/general/test_array1d_bad_4.fzn
array[1..3] of var int: a :: output_array([1..3]) = [1,2,3];
array[1..3] of var int: b :: output_array([11..13]) = a;
solve  satisfy;
